# scn-tool

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: deploy.yml
compiler/: Cargo.toml
compiler/src/: main.rs
decompiler/: Cargo.toml
decompiler/src/: main.rs
scn-compiler/: Cargo.toml
scn-compiler/src/: main.rs
scn-decompiler/: Cargo.toml
scn-decompiler/src/: main.rs
scn-script-extractor/: Cargo.toml
scn-script-extractor/src/: main.rs
scn-script-inserter/: Cargo.toml
scn-script-inserter/src/: main.rs
script-common/: Cargo.toml
script-common/src/: lib.rs
script-extractor/: Cargo.toml
script-extractor/src/: main.rs
script-patch/: Cargo.toml
script-patch/src/: main.rs
