[workspace]
resolver = "3"
members = [
    "./script-common",
    "./script-extractor",
    "./script-patch",
    "./decompiler",
    "./compiler",
]

[workspace.package]
publish = false
version = "0.6.2"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
scn-script-common = { path = "./script-common" }

emote-psb = "0.7.2"