[package]
name = "scn-compiler"
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
emote-psb = { workspace = true }

clap = { version = "4.5.60", features = ["derive"] }
serde-query = "0.2.0"
anyhow = "1.0.102"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
