[package]
name = "scn-compiler"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emote-psb = {version = "0.5.0", features = ["serde"]}
serde = "1.0.0"
serde_json = "1.0.0"