[package]
name = "scn-script-extractor"
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
emote-psb = { workspace = true }
scn-script-common = { workspace = true }

clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-query = "0.2.0"
anyhow = "1.0.102"
serde_json = "1.0.149"
